--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -37,16 +37,14 @@
                 <h:form id="noti">
                     <o:socket channel="notificacion" onmessage="socketListener"/>
                     <p:remoteCommand name="notificar" actionListener="#{sessionController.escucha()}" update=":form0:msgs"/>
-                    <p:panel id="toggleable" header="Notificación" toggleable="true" 
-                             toggleSpeed="500" widgetVar="panel" 
+                    <p:panel id="notiPanel" header="#{sessionController.nombreNoti}" toggleable="true" 
+                             toggleSpeed="500" widgetVar="panel" rendered="#{sessionController.verNoti}"
                              style="margin-bottom:20px">
-
+                        
                         <p:ajax event="toggle" listener="#{sessionController.onToggle}" update=":form0:msgs" />
-
+                        
                         <h:panelGrid columns="1" >
-                            <h:outputText value="Francis Ford Coppola's legendary continuation and sequel to his landmark 1972 film, The_Godfather, parallels the young Vito Corleone's rise with his son Michael's spiritual fall, deepening The_Godfather's depiction of the dark side of the American dream. 
-                                          In the early 1900s, the child Vito flees his Sicilian village for America after the local Mafia kills his family. Vito struggles to make a living, legally or illegally, for his wife and growing brood in Little Italy, 
-                                          killing the local Black Hand Fanucci after he demands his customary cut of the tyro's business. With Fanucci gone, Vito's communal stature grows." />
+                            <h:outputText value="#{sessionController.cuerpoNoti}" />
                         </h:panelGrid>
                     </p:panel>
                 </h:form>
