--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -33,20 +33,23 @@
                     function socketListener(message, channel, event) {
                         notificar([{name: 'mss', value: message}]);
                     }
-                </script>
-                <h:form id="noti">
+                </script>                
                     <o:socket channel="notificacion" onmessage="socketListener"/>
+                <h:form id="noti">
+                    <h1>Área de Notificaciones</h1>
                     <p:remoteCommand name="notificar" actionListener="#{sessionController.escucha()}" update=":form0:msgs"/>
-                    <p:panel id="notiPanel" header="#{sessionController.nombreNoti}" toggleable="true" 
-                             toggleSpeed="500" widgetVar="panel" rendered="#{sessionController.verNoti}"
+                    <ui:repeat value="#{sessionController.notificaciones}" var="n">
+                        <p:panel header="#{n.nombreNoti}" toggleable="true" 
+                                 toggleSpeed="500" rendered="#{n.verNoti}" collapsed="#{n.collapsed}" 
                              style="margin-bottom:20px">
                         
-                        <p:ajax event="toggle" listener="#{sessionController.onToggle}" update=":form0:msgs" />
+                       
                         
                         <h:panelGrid columns="1" >
-                            <h:outputText value="#{sessionController.cuerpoNoti}" />
+                            <h:outputText value="#{n.cuerpoNoti}" />
                         </h:panelGrid>
                     </p:panel>
+                    </ui:repeat>
                 </h:form>
             </ui:insert>
         </div>
