--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -17,8 +17,8 @@
         <h:outputScript library="js" name="locales.js"/>
         <f:event type="preRenderView" listener="#{sessionController.log()}"/>
     </h:head>
-    <!-- color: #ffffff" -->
-    <h:body style="background-color: #323232; color: white;">
+    <!-- color: #ffffff"  style="background-color: #323232; color: white;"-->
+    <h:body>
         <div id="top">
             <ui:insert name="top">
                 <h:form id="form0">
