--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -57,7 +57,7 @@
         </div>
         <div id="bottom">
             <ui:insert name="bottom">
-                <footer id="footer" class="top-space">
+                <!--<footer id="footer" class="top-space">
                     <div class="footer2">
                         <div class="container">
                             <div class="row">
@@ -72,10 +72,10 @@
                                     </div>
                                 </div>
 
-                            </div> <!-- /row of widgets -->
+                            </div> <! - - /row of widgets - - >
                         </div>
                     </div>
-                </footer>
+                </footer>-->
             </ui:insert>
         </div>
     </h:body>
