--- a/saitae-web/src/main/webapp/resources/components/autentia/maestro.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/maestro.xhtml
@@ -56,7 +56,7 @@
                         title=" "/>
             <p:message for="asc"/>
             
-            <p:outputLabel for="tcat" value="Fecha desde que está en la categoría: "/>
+            <p:outputLabel for="tcat" value="Número de años desde que está en la categoría actual: "/>
             <p:inputText id="tcat" value="#{cc.attrs.maestro.maestroTiempoCategoria}" required="true" />
             <p:message for="tcat"/>
             
