solicitud  de inscripción de proyecto pedagógico iniciado. 60% avanzado.

--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -22,7 +22,7 @@
         <div id="top">
             <ui:insert name="top">
                 <h:form id="form0">
-                    <p:growl id="msgs" showDetail="true" />
+                    <p:growl id="msgs" showDetail="true" life="10000"/>
                     <p:menubar id="menubar" model="#{sessionController.mm}"/>
                 </h:form>
             </ui:insert>
