corrección al administrados de anuncios. Visualización de la información del proyecto pedagógico. edición de la información de los proyectos pedagógicos desde los perfiles individuales y el historial de reserva.

--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -30,11 +30,10 @@
         <div id="right">
             <ui:insert name="right">                
                 <script>
-                    function socketListener(message) {
-                        notificar([{name: 'mss', value: message}]);
-                    }
+                    
                 </script>                
-                <o:socket channel="notificacion" onmessage="socketListener"/>
+                <o:socket channel="notificacion" onmessage="function socketListener(message) {
+                        notificar([{name: 'mss', value: message}]);}"/>
                 <h:form id="noti">
                     <h1 align="center">Área de Notificaciones</h1>
                     <p:remoteCommand name="notificar" actionListener="#{sessionController.escucha()}"/>
