Optimización de código. Enviado a revisión.Inicio del proceso de carga de constancias médicas. 5% terminado.

--- a/saitae-web/src/main/webapp/resources/css/login.css
+++ b/saitae-web/src/main/webapp/resources/css/login.css
@@ -4,7 +4,7 @@
     font-family: century Gothic;
 }
 body{
-    background: url(../images/fog-foggy-forest-4827.jpg) no-repeat center center fixed;
+    background: url(../resources/img/intexM.jpeg) no-repeat center center fixed;
     background-size: cover;
 
 
