--- a/saitae-web/src/main/webapp/resources/css/cssLayout.css
+++ b/saitae-web/src/main/webapp/resources/css/cssLayout.css
@@ -23,12 +23,14 @@
 
 .content {
     padding: 5px;
-    width: 80%;
+    width: 83%;
+    height: 90%;
 }
 #right {
     float: right;
     padding: 5px;
-    width: 20%;
+    width: 17%;
+    height: 90%;
 }
 
 
